Attempt to fix scrollbar

--- a/sprint4-frontend/src/assets/styles/basics/_layout.scss
+++ b/sprint4-frontend/src/assets/styles/basics/_layout.scss
@@ -13,6 +13,11 @@
         "side-bar main-view"
         "footer footer";
 
+    .main-view {
+        overflow-y: auto;
+        // display: grid;
+        // grid-template-rows: auto 1fr;
+    }
 
     @include for-narrow-layout {
         // grid-template-columns:
